Fix covered text in iPad layout

--- a/tapjoyads/public/stylesheets/sass/games/style.scss
+++ b/tapjoyads/public/stylesheets/sass/games/style.scss
@@ -393,11 +393,11 @@ input[type=email]:focus, input[type=password]:focus {
       .knows_apps {
         float: none;
         height: 82px;
+        padding-top: 50px;
       }
       .about_tapjoy {
         float: none;
         line-height: 140%;
-        padding-top: 24px;
       }
     }
   }
